bug: none - fix center align on DwtSelect's

--- a/Ajax/WebRoot/js/config/style/dwt.css
+++ b/Ajax/WebRoot/js/config/style/dwt.css
@@ -1637,6 +1637,7 @@
 .ZSelectAutoSizingContainer 		{ overflow: hidden; height: 22px; }		/* TODO: SIZE ASSUMPTION! */
 
 .ZSelect									{	@Select@		@SelectSpacing@			}
+.ZSelect .ZWidgetTitle						{	padding-left: 5px; text-align: left;	}
 
 			.ZSelectBorder					{	@SelectBorder@	@SelectBorder-normal@	}
 .ZHover		.ZSelectBorder					{					@SelectBorder-hover@	}
